# interview-hackmd-2025

./: .gitignore  README.md  deploy_lambda.sh  deploy_layer.sh  pyproject.toml
.github/workflows/: deploy-collector.yaml  deploy-processor.yaml
src/collect/: collector.py  deploy_eventbridge.sh  deploy_lambda.sh  deploy_layer.sh  lambda_function.py  requirements.txt
src/process/: __init__.py  deploy_eventbridge.sh  deploy_lambda.sh  deploy_layer.sh  extractor.py  lambda_function.py  model.py  pipeline.py  processor.py  query.py  requirements.txt  transformer.py  writer.py
src/process_history/: README.md  __init__.py  deploy_glue.sh  extractor.py  main.py  metric.py  model.py  pipeline.py  quality.py  requirements.txt  test_event_arxiv-processor.json  transformer.py  writer.py
src/sql/: authors.sql  categories.sql  paper_authors.sql  paper_categories.sql  papers.sql
