[project]
name = "hackmd-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.1",
    "pendulum>=3.1.0",
    "pyarrow>=21.0.0",
]

[dependency-groups]
aws = [
    "boto3>=1.40.1",
]
collect = [
    "kaggle>=1.7.4.5",
    "sickle>=0.7.0",
]
